objects/mcdm_15__Bulk_Send_Batch__c.object
<CustomObject>
    <fields>
        <fullName>mcdm_15__Bulk_Send_Job__c</fullName>
        <label>Bulk Send Job</label>
        <referenceTo>mcdm_15__Bulk_Send_Job__c</referenceTo>
        <relationshipLabel>Bulk Send Batches</relationshipLabel>
        <relationshipName>Bulk_Send_Batches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>mcdm_15__CSV_Number__c</fullName>
        <label>CSV Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mcdm_15__CSV_Row_Number__c</fullName>
        <label># CSV Rows Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Chunk_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Sending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mcdm_15__Current_CSV_Processing__c</fullName>
        <formula>&apos;DM_Bulk_Send&apos; + TEXT(mcdm_15__CSV_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current CSV Processing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Error__c</fullName>
        <label>Error</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Friendly_Error__c</fullName>
        <description>A friendly error is shown to the standard user in this field, if something went wrong with the chunk processing overall and not at the individual member level.</description>
        <label>Friendly Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Has_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Has_To_Retry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has To Retry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Members__c</fullName>
        <description>Number of members on this chunk.</description>
        <label># Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Queueable_Job_Id__c</fullName>
        <description>Queueable apex job ID</description>
        <label>Queueable Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Retries_Count__c</fullName>
        <label># Retries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Total_CSVs__c</fullName>
        <label># CSVs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bulk Send Batch</label>
    <nameField>
        <displayFormat>DMBSB-{00000}</displayFormat>
        <label>Bulk Send Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Send Batchs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>